--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -44,8 +44,9 @@ jobs:
         run: |
           hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3.0.1
+        uses: actions/upload-pages-artifact@v4
         with:
+          name: my-artifact-${{ matrix.job_id }} # Ensure unique artifact names
           path: ./public
 
   # Deploy website to GitHub Pages hosting
