--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          name: my-artifact-${{ matrix.job_id }} # Ensure unique artifact names
+          name: my-artifact-${{ github.run_id }}
           path: ./public
 
   # Deploy website to GitHub Pages hosting
@@ -57,6 +57,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4  
+        with:
+          name: my-artifact-${{ github.run_id }}
+          path: ./public
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
