--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -60,7 +60,8 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4  
         with:
-          name: my-artifact-${{ github.run_id }}
+          pattern: my-artifact-*
+          merge-multiple: true
           path: ./public
       - name: Deploy to GitHub Pages
         id: deployment
